shiro/src/main/java/shiro/interpreter/ShiroParser.java
// $ANTLR 3.4 /home/aga53/Workspace/Eclipse/Shiro/src/shiro/interpreter/Shiro.g 2012-11-16 16:23:25

package shiro.interpreter;
import java.util.HashMap;
import java.util.Map;



import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class ShiroParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ACTIVATION", "ACTIVATION_LIST", "COMMENT", "DIGIT", "EVAL_SELECT", "IDENT", "LCLETTER", "NEGATION", "NEWLINE", "NODE_STMT", "NODE_UPDATE_PORT", "NUMBER", "PATH", "PORT_ASSIGNMENT", "PORT_DECL", "PORT_INDEX", "PORT_INIT", "PORT_TAG", "PRODUCES", "STATE_DECL", "STRING_LITERAL", "SUBJ_NODE_PROD", "SUBJ_SELECT", "UCLETTER", "WS", "'%'", "'('", "')'", "'*'", "'+'", "','", "'-'", "'->'", "'.'", "'/'", "'<'", "'>'", "'Comment'", "'Graph'", "'Parent'", "'Time'", "'['", "']'", "'begin'", "'collection'", "'end'", "'eval'", "'graph'", "'node'", "'port'", "'state'", "'subjunct'", "'subjunctive node'", "'view'", "'|'"
    };

    public static final int EOF=-1;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int ACTIVATION=4;
    public static final int ACTIVATION_LIST=5;
    public static final int COMMENT=6;
    public static final int DIGIT=7;
    public static final int EVAL_SELECT=8;
    public static final int IDENT=9;
    public static final int LCLETTER=10;
    public static final int NEGATION=11;
    public static final int NEWLINE=12;
    public static final int NODE_STMT=13;
    public static final int NODE_UPDATE_PORT=14;
    public static final int NUMBER=15;
    public static final int PATH=16;
    public static final int PORT_ASSIGNMENT=17;
    public static final int PORT_DECL=18;
    public static final int PORT_INDEX=19;
    public static final int PORT_INIT=20;
    public static final int PORT_TAG=21;
    public static final int PRODUCES=22;
    public static final int STATE_DECL=23;
    public static final int STRING_LITERAL=24;
    public static final int SUBJ_NODE_PROD=25;
    public static final int SUBJ_SELECT=26;
    public static final int UCLETTER=27;
    public static final int WS=28;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public ShiroParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public ShiroParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return ShiroParser.tokenNames; }
    public String getGrammarFileName() { return "/home/aga53/Workspace/Eclipse/Shiro/src/shiro/interpreter/Shiro.g"; }


    // store the AST from the node definitions
    private Map<String, CommonTree> defs = new HashMap<String, CommonTree>();

    public Map<String, CommonTree> getNodeDefinitions(){
        return defs;
    }	



    public static class shiro_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "shiro"
    // /home/aga53/Workspace/Eclipse/Shiro/src/shiro/interpreter/Shiro.g:49:1: shiro : ( statement )+ ;
    public final ShiroParser.shiro_return shiro() throws RecognitionException {
        ShiroParser.shiro_return retval = new ShiroParser.shiro_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        ShiroParser.statement_return statement1 =null;



        try {
            // /home/aga53/Workspace/Eclipse/Shiro/src/shiro/interpreter/Shiro.g:49:8: ( ( statement )+ )
            // /home/aga53/Workspace/Eclipse/Shiro/src/shiro/interpreter/Shiro.g:49:11: ( statement )+
            {
            root_0 = (CommonTree)adaptor.nil();


            // /home/aga53/Workspace/Eclipse/Shiro/src/shiro/interpreter/Shiro.g:49:11: ( statement )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==NEWLINE||LA1_0==48||(LA1_0 >= 51 && LA1_0 <= 52)||(LA1_0 >= 54 && LA1_0 <= 57)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /home/aga53/Workspace/Eclipse/Shiro/src/shiro/interpreter/Shiro.g:49:11: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_shiro124);
            	    statement1=statement();

            	    state._fsp--;

            	    adaptor.addChild(root_0, statement1.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "shiro"


    public static class statement_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "statement"
    // /home/aga53/Workspace/Eclipse/Shiro/src/shiro/interpreter/Shiro.g:52:1: statement : ( nodestmt | sNode | graphDecl | statestmt | collection | view | NEWLINE !);
    public final ShiroParser.statement_return statement() throws RecognitionException {
        ShiroParser.statement_return retval = new ShiroParser.statement_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token NEWLINE8=null;
        ShiroParser.nodestmt_return nodestmt2 =null;

        ShiroParser.sNode_return sNode3 =null;

        ShiroParser.graphDecl_return graphDecl4 =null;

        ShiroParser.statestmt_return statestmt5 =null;

        ShiroParser.collection_return collection6 =null;

        ShiroParser.view_return view7 =null;


        CommonTree NEWLINE8_tree=null;

        try {
            // /home/aga53/Workspace/Eclipse/Shiro/src/shiro/interpreter/Shiro.g:53:2: ( nodestmt | sNode | graphDecl | statestmt | collection | view | NEWLINE !)
            int alt2=7;
            switch ( input.LA(1) ) {
            case 52:
            case 55:
                {
                alt2=1;
                }
                break;
            case 56:
                {
                alt2=2;
                }
                break;
            case 51:
                {
                alt2=3;
                }
                break;
            case 54:
                {
                alt2=4;
                }
                break;
            case 48:
                {
                alt2=5;
                }
                break;
            case 57:
                {
                alt2=6;
                }
                break;
            case NEWLINE:
                {
                alt2=7;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;

            }

            switch (alt2) {
                case 1 :
                    // /home/aga53/Workspace/Eclipse/Shiro/src/shiro/interpreter/Shiro.g:53:4: nodestmt
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_nodestmt_in_statement138);
                    nodestmt2=nodestmt();

                    state._fsp--;

                    adaptor.addChild(root_0, nodestmt2.getTree());

                    }
                    break;
                case 2 :
                    // /home/aga53/Workspace/Eclipse/Shiro/src/shiro/interpreter/Shiro.g:54:4: sNode
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_sNode_in_statement143);
                    sNode3=sNode();

                    state._fsp--;

                    adaptor.addChild(root_0, sNode3.getTree());

                    }
                    break;
                case 3 :
                    // /home/aga53/Workspace/Eclipse/Shiro/src/shiro/interpreter/Shiro.g:55:4: graphDecl
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_graphDecl_in_statement149);
                    graphDecl4=graphDecl();

                    state._fsp--;

                    adaptor.addChild(root_0, graphDecl4.getTree());

                    }
                    break;
                case 4 :
                    // /home/aga53/Workspace/Eclipse/Shiro/src/shiro/interpreter/Shiro.g:56:4: statestmt
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_statestmt_in_statement154);
                    statestmt5=statestmt();

                    state._fsp--;

                    adaptor.addChild(root_0, statestmt5.getTree());

                    }
                    break;
                case 5 :
                    // /home/aga53/Workspace/Eclipse/Shiro/src/shiro/interpreter/Shiro.g:57:4: collection
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_collection_in_statement159);
                    collection6=collection();

                    state._fsp--;

                    adaptor.addChild(root_0, collection6.getTree());

                    }
                    break;
                case 6 :
                    // /home/aga53/Workspace/Eclipse/Shiro/src/shiro/interpreter/Shiro.g:58:4: view
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_view_in_statement164);
                    view7=view();

                    state._fsp--;

                    adaptor.addChild(root_0, view7.getTree());

                    }
                    break;
                case 7 :
                    // /home/aga53/Workspace/Eclipse/Shiro/src/shiro/interpreter/Shiro.g:59:4: NEWLINE !
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    NEWLINE8=(Token)match(input,NEWLINE,FOLLOW_NEWLINE_in_statement169); 

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "statement"


    public static class view_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "view"
    // /home/aga53/Workspace/Eclipse/Shiro/src/shiro/interpreter/Shiro.g:62:1: view : 'view' IDENT mfName IDENT -> ^( 'view' IDENT mfName IDENT ) ;
    public final ShiroParser.view_return view() throws RecognitionException {
        ShiroParser.view_return retval = new ShiroParser.view_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token string_literal9=null;
        Token IDENT10=null;
        Token IDENT12=null;
        ShiroParser.mfName_return mfName11 =null;


        CommonTree string_literal9_tree=null;
        CommonTree IDENT10_tree=null;
        CommonTree IDENT12_tree=null;
        RewriteRuleTokenStream stream_IDENT=new RewriteRuleTokenStream(adaptor,"token IDENT");
        RewriteRuleTokenStream stream_57=new RewriteRuleTokenStream(adaptor,"token 57");
        RewriteRuleSubtreeStream stream_mfName=new RewriteRuleSubtreeStream(adaptor,"rule mfName");
        try {
            // /home/aga53/Workspace/Eclipse/Shiro/src/shiro/interpreter/Shiro.g:62:6: ( 'view' IDENT mfName IDENT -> ^( 'view' IDENT mfName IDENT ) )
            // /home/aga53/Workspace/Eclipse/Shiro/src/shiro/interpreter/Shiro.g:62:8: 'view' IDENT mfName IDENT
            {
            string_literal9=(Token)match(input,57,FOLLOW_57_in_view181);  
            stream_57.add(string_literal9);


            IDENT10=(Token)match(input,IDENT,FOLLOW_IDENT_in_view183);  
            stream_IDENT.add(IDENT10);


            pushFollow(FOLLOW_mfName_in_view185);
            mfName11=mfName();

            state._fsp--;

            stream_mfName.add(mfName11.getTree());

            IDENT12=(Token)match(input,IDENT,FOLLOW_IDENT_in_view187);  
            stream_IDENT.add(IDENT12);


            // AST REWRITE
            // elements: IDENT, 57, IDENT, mfName
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 62:34: -> ^( 'view' IDENT mfName IDENT )
            {
                // /home/aga53/Workspace/Eclipse/Shiro/src/shiro/interpreter/Shiro.g:62:37: ^( 'view' IDENT mfName IDENT )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(
                stream_57.nextNode()
                , root_1);

                adaptor.addChild(root_1, 
                stream_IDENT.nextNode()
                );

                adaptor.addChild(root_1, stream_mfName.nextTree());

                adaptor.addChild(root_1, 
                stream_IDENT.nextNode()
                );

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "view"


    public static class collection_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "collection"
    // /home/aga53/Workspace/Eclipse/Shiro/src/shiro/interpreter/Shiro.g:65:1: collection : 'collection' IDENT orderingFunc path 'begin' NEWLINE ( collItem )+ ( NEWLINE )? 'end' -> ^( 'collection' IDENT orderingFunc path ( collItem )+ ) ;
    public final ShiroParser.collection_return collection() throws RecognitionException {
        ShiroParser.collection_return retval = new ShiroParser.collection_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token string_literal13=null;
        Token IDENT14=null;
        Token string_literal17=null;
        Token NEWLINE18=null;
        Token NEWLINE20=null;
        Token string_literal21=null;
        ShiroParser.orderingFunc_return orderingFunc15 =null;

        ShiroParser.path_return path16 =null;

        ShiroParser.collItem_return collItem19 =null;


        CommonTree string_literal13_tree=null;
        CommonTree IDENT14_tree=null;
        CommonTree string_literal17_tree=null;
        CommonTree NEWLINE18_tree=null;
        CommonTree NEWLINE20_tree=null;
        CommonTree string_literal21_tree=null;
        RewriteRuleTokenStream stream_49=new RewriteRuleTokenStream(adaptor,"token 49");
        RewriteRuleTokenStream stream_48=new RewriteRuleTokenStream(adaptor,"token 48");
        RewriteRuleTokenStream stream_IDENT=new RewriteRuleTokenStream(adaptor,"token IDENT");
        RewriteRuleTokenStream stream_47=new RewriteRuleTokenStream(adaptor,"token 47");
        RewriteRuleTokenStream stream_NEWLINE=new RewriteRuleTokenStream(adaptor,"token NEWLINE");
        RewriteRuleSubtreeStream stream_orderingFunc=new RewriteRuleSubtreeStream(adaptor,"rule orderingFunc");
        RewriteRuleSubtreeStream stream_path=new RewriteRuleSubtreeStream(adaptor,"rule path");
        RewriteRuleSubtreeStream stream_collItem=new RewriteRuleSubtreeStream(adaptor,"rule collItem");
        try {
            // /home/aga53/Workspace/Eclipse/Shiro/src/shiro/interpreter/Shiro.g:66:2: ( 'collection' IDENT orderingFunc path 'begin' NEWLINE ( collItem )+ ( NEWLINE )? 'end' -> ^( 'collection' IDENT orderingFunc path ( collItem )+ ) )
            // /home/aga53/Workspace/Eclipse/Shiro/src/shiro/interpreter/Shiro.g:66:4: 'collection' IDENT orderingFunc path 'begin' NEWLINE ( collItem )+ ( NEWLINE )? 'end'
            {
            string_literal13=(Token)match(input,48,FOLLOW_48_in_collection211);  
            stream_48.add(string_literal13);


            IDENT14=(Token)match(input,IDENT,FOLLOW_IDENT_in_collection213);  
            stream_IDENT.add(IDENT14);


            pushFollow(FOLLOW_orderingFunc_in_collection215);
            orderingFunc15=orderingFunc();

            state._fsp--;

            stream_orderingFunc.add(orderingFunc15.getTree());

            pushFollow(FOLLOW_path_in_collection217);
            path16=path();

            state._fsp--;

            stream_path.add(path16.getTree());

            string_literal17=(Token)match(input,47,FOLLOW_47_in_collection219);  
            stream_47.add(string_literal17);


            NEWLINE18=(Token)match(input,NEWLINE,FOLLOW_NEWLINE_in_collection221);  
            stream_NEWLINE.add(NEWLINE18);


            // /home/aga53/Workspace/Eclipse/Shiro/src/shiro/interpreter/Shiro.g:67:4: ( collItem )+
            int cnt3=0;
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==IDENT) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // /home/aga53/Workspace/Eclipse/Shiro/src/shiro/interpreter/Shiro.g:67:5: collItem
            	    {
            	    pushFollow(FOLLOW_collItem_in_collection227);
            	    collItem19=collItem();

            	    state._fsp--;

            	    stream_collItem.add(collItem19.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt3 >= 1 ) break loop3;
                        EarlyExitException eee =
                            new EarlyExitException(3, input);
                        throw eee;
                }
                cnt3++;
            } while (true);


            // /home/aga53/Workspace/Eclipse/Shiro/src/shiro/interpreter/Shiro.g:67:16: ( NEWLINE )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==NEWLINE) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // /home/aga53/Workspace/Eclipse/Shiro/src/shiro/interpreter/Shiro.g:67:16: NEWLINE
                    {
                    NEWLINE20=(Token)match(input,NEWLINE,FOLLOW_NEWLINE_in_collection231);  
                    stream_NEWLINE.add(NEWLINE20);


                    }
                    break;

            }


            string_literal21=(Token)match(input,49,FOLLOW_49_in_collection236);  
            stream_49.add(string_literal21);


            // AST REWRITE
            // elements: path, IDENT, collItem, 48, orderingFunc
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 69:3: -> ^( 'collection' IDENT orderingFunc path ( collItem )+ )
            {
                // /home/aga53/Workspace/Eclipse/Shiro/src/shiro/interpreter/Shiro.g:69:6: ^( 'collection' IDENT orderingFunc path ( collItem )+ )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(
                stream_48.nextNode()
                , root_1);

                adaptor.addChild(root_1, 
                stream_IDENT.nextNode()
                );

                adaptor.addChild(root_1, stream_orderingFunc.nextTree());

                adaptor.addChild(root_1, stream_path.nextTree());

                if ( !(stream_collItem.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_collItem.hasNext() ) {
                    adaptor.addChild(root_1, stream_collItem.nextTree());

                }
                stream_collItem.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "collection"


    public static class collItem_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "collItem"
    // /home/aga53/Workspace/Eclipse/Shiro/src/shiro/interpreter/Shiro.g:72:1: collItem : IDENT -> IDENT ;
    public final ShiroParser.collItem_return collItem() throws RecognitionException {
        ShiroParser.collItem_return retval = new ShiroParser.collItem_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token IDENT22=null;

        CommonTree IDENT22_tree=null;
        RewriteRuleTokenStream stream_IDENT=new RewriteRuleTokenStream(adaptor,"token IDENT");

        try {
            // /home/aga53/Workspace/Eclipse/Shiro/src/shiro/interpreter/Shiro.g:72:9: ( IDENT -> IDENT )
            // /home/aga53/Workspace/Eclipse/Shiro/src/shiro/interpreter/Shiro.g:72:11: IDENT
            {
            IDENT22=(Token)match(input,IDENT,FOLLOW_IDENT_in_collItem262);  
            stream_IDENT.add(IDENT22);


            // AST REWRITE
            // elements: IDENT
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 72:17: -> IDENT
            {
                adaptor.addChild(root_0, 
                stream_IDENT.nextNode()
                );

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "collItem"


    public static class orderingFunc_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "orderingFunc"
    // /home/aga53/Workspace/Eclipse/Shiro/src/shiro/interpreter/Shiro.g:75:1: orderingFunc : IDENT -> IDENT ;
    public final ShiroParser.orderingFunc_return orderingFunc() throws RecognitionException {
        ShiroParser.orderingFunc_return retval = new ShiroParser.orderingFunc_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token IDENT23=null;

        CommonTree IDENT23_tree=null;
        RewriteRuleTokenStream stream_IDENT=new RewriteRuleTokenStream(adaptor,"token IDENT");

        try {
            // /home/aga53/Workspace/Eclipse/Shiro/src/shiro/interpreter/Shiro.g:76:2: ( IDENT -> IDENT )
            // /home/aga53/Workspace/Eclipse/Shiro/src/shiro/interpreter/Shiro.g:76:4: IDENT
            {
            IDENT23=(Token)match(input,IDENT,FOLLOW_IDENT_in_orderingFunc277);  
            stream_IDENT.add(IDENT23);


            // AST REWRITE
            // elements: IDENT
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 76:10: -> IDENT
            {
                adaptor.addChild(root_0, 
                stream_IDENT.nextNode()
                );

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "orderingFunc"


    public static class statestmt_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "statestmt"
    // /home/aga53/Workspace/Eclipse/Shiro/src/shiro/interpreter/Shiro.g:79:1: statestmt : 'state' stateName 'begin' NEWLINE stateHeader 'end' -> ^( STATE_DECL stateName stateHeader ) ;
    public final ShiroParser.statestmt_return statestmt() throws RecognitionException {
        ShiroParser.statestmt_return retval = new ShiroParser.statestmt_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token string_literal24=null;
        Token string_literal26=null;
        Token NEWLINE27=null;
        Token string_literal29=null;
        ShiroParser.stateName_return stateName25 =null;

        ShiroParser.stateHeader_return stateHeader28 =null;

